IDEX-2086: added styles for the list widget

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/dropdown/DropdownList.css
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/dropdown/DropdownList.css
@@ -15,12 +15,14 @@
 }
 
 .onMouseOver {
+    height: 22px;
     padding-right: 5px;
     border-radius: 4px;
     border: 1px solid #232323;
 }
 
 .onMouseOut {
+    height: 22px;
     padding-right: 5px;
     border-radius: 4px;
     border: 1px solid #666666;
