Move constants.css from ide-app module to ide-ui module

--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/constants.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/constants.css
@@ -30,7 +30,7 @@
 @def dividerColor #ebebeb;
 @def dividerColorDark #c0c0c0;
 
-@eval scrollbarSize org.eclipse.che.ide.common.Constants.SCROLLBAR_SIZE+"px";
+@eval scrollbarSize org.eclipse.che.ide.ui.Constants.SCROLLBAR_SIZE+"px";
 /* Buttons */
 @def buttonBorderRadius 2px;
 @def buttonFontSize 11px;
