--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/dropdown/DropdownList.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/dropdown/DropdownList.css
@@ -27,3 +27,11 @@
     border-radius: 4px;
     border: 1px solid #666666;
 }
+
+.onClick {
+    height: 22px;
+    padding-right: 5px;
+    border-radius: 4px;
+    border: 1px solid #666666;
+    background-color: #D4E8FF;
+}
