IDEX-2685: Improved part stack API

--- a/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/parts/partstack.css
+++ b/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/parts/partstack.css
@@ -193,6 +193,7 @@
 
 .ide-PartStack-Tool-Tab-selected {
     /* tab that is currently selected (active) */
+    border-top: 1px solid #47afdd;
     cursor: default;
     color: #ffffff;
 }
