--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/toolbar/toolbar.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/toolbar/toolbar.css
@@ -8,37 +8,64 @@
  * Contributors:
  *   Codenvy, S.A. - initial API and implementation
  *******************************************************************************/
-.toolbarMenuPanel {
+/*.toolbarMenuPanel {*/
+    /*width: 100%;*/
+    /*height: 26px;*/
+    /*overflow: hidden;*/
+    /*cursor: default;*/
+
+    /*background-color: toolbarBackgroundColor;*/
+
+    /*-webkit-box-sizing: border-box;*/
+    /*-moz-box-sizing: border-box;*/
+    /*box-sizing: border-box;*/
+
+    /*border-top: 1px solid tabBorder;*/
+    /*border-bottom: 1px solid tabBorder;*/
+/*}*/
+
+/*.toolbarMenuPanel > div {*/
+    /*/!*margin-top: 1px;*!/*/
+    /*margin-left: 2px;*/
+    /*float: left;*/
+/*}*/
+
+.toolbarPanel {
     width: 100%;
+    /*height: 17px;*/
     height: 26px;
+    overflow: hidden;
     cursor: default;
+
+    /*background-color: tabsPanelBackground;*/
+    /*border-top: 1px solid tabBorderShadow;*/
+    /*border-bottom: 1px solid tabBorder;*/
+    /*box-shadow: 3 2px 5px 0 rgba(50, 50, 50, 0.75);*/
+
     background-color: toolbarBackgroundColor;
+
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
     border-top: 1px solid tabBorder;
     border-bottom: 1px solid tabBorder;
 }
 
-.toolbarMenuPanel div {
-    margin-top: 1px;
-    margin-left: 2px;
+.toolbarPanel > div {
+    text-shadow: 0px 1px 0px buttonTextShadow;
     float: left;
-}
+    margin-top: 1px;
 
-.toolbarPanel {
-    width: 100%;
-    height: 17px;
-    cursor: default;
-    background-color: tabsPanelBackground;
-    border-top: 1px solid tabBorderShadow;
-    border-bottom: 1px solid tabBorder;
-    box-shadow: 3 2px 5px 0 rgba(50, 50, 50, 0.75);
+    height: 24px;
+
     display: flex;
     display: -webkit-flex;
     display: -moz-box;
 }
 
-.toolbarPanel div {
-    text-shadow: 0px 1px 0px buttonTextShadow;
-    float: left;
+.toolbarPanel > div > div {
+    height: 24px;
 }
 
 .toolbarPanel a {
@@ -48,17 +75,25 @@
 .toolbarPanel .toolbarDelimiter {
     width: 0px;
     height: 18px;
-    margin-top: -1px;
+    /*margin-top: -1px;*/
     border-left: 1px solid tabBorder;
     border-right: 1px solid tabBorderShadow;
 }
+
+
+
+/*/!*.toolbarMenuPanel .toolbarDelimiter {*!/*/
+/*.toolbarDelimiter {*/
+    /*width: 1px;*/
+    /*height: 24px;*/
+    /*border-left: 1px solid tabBorder;*/
+/*}*/
 
 .toolbarPanel svg.iconButtonIcon {
     width: 12px;
     height: 12px;
     margin-top: 1px;
 }
-
 
 .rightPanel {
     float: right !important;
@@ -74,15 +109,6 @@
     height: 14px;
     overflow: hidden;
     margin-right: 1px;
-}
-
-.toolbarMenuPanel .toolbarDelimiter {
-    width: 1px;
-    height: 24px;
-    border-left: 1px solid tabBorder;
-}
-
-.toolbarDelimiter {
 }
 
 .iconButtonPanel,
