--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/dropdown/DropdownList.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/dropdown/DropdownList.css
@@ -11,27 +11,32 @@
 .expandedImage {
     transform: rotate(90deg);
     -webkit-transform: rotate(90deg);
-    margin-right: 3px
+    margin-top: 4px;
+}
+
+.onMouseOver,
+.onMouseOut,
+.onClick {
+    display: flex;
+    height: 20px;
+    padding-right: 5px;
+    margin-right: 1px;
+    margin-left: 1px;
+    border-radius: 4px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #666666;
 }
 
 .onMouseOver {
-    height: 22px;
-    padding-right: 5px;
-    border-radius: 4px;
-    border: 1px solid #232323;
+    border-color: #232323;
 }
 
 .onMouseOut {
-    height: 22px;
-    padding-right: 5px;
-    border-radius: 4px;
-    border: 1px solid #666666;
+    border-color: #666666;
 }
 
 .onClick {
-    height: 22px;
-    padding-right: 5px;
-    border-radius: 4px;
-    border: 1px solid #666666;
+    border-color: #666666;
     background-color: #D4E8FF;
 }
