IDEX-2646 Place Refresh button onto the project explorer panel

--- a/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/parts/partstack.css
+++ b/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/parts/partstack.css
@@ -525,8 +525,10 @@
 }
 
 .ide-Base-Part-Toolbar-Bottom-Button-Right {
-    float: right;
     margin-right: 5px;
+    position: absolute;
+    top: 1px;
+    right: 0px;
 }
 
 .ide-Base-Part-Toolbar-Bottom-Button > svg {
