IDEX-2865 Adop new styles for panels

--- a/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/parts/partstack.css
+++ b/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/parts/partstack.css
@@ -9,251 +9,74 @@
  *   Codenvy, S.A. - initial API and implementation
  *******************************************************************************/
 
-.ide-PartStack {
-    /* fill */
-}
+.ide-PartStack-Tab {
+    width: 80px;
 
-.ide-PartStack .ide-PartStack-Tabs {
-    /* panel where tab-buttons created*/
-    background: editorBackgroundColor;
-    border-bottom: 1px solid tabBorder;
-}
-
-.ide-PartStack .ide-PartStack-Editor-Content {
-    border-left: 3px solid activeTabBackground;
-    border-top: 3px solid activeTabBackground;
-    background-color: activeTabBackground;
-}
-
-.ide-PartStack .ide-PartStack-Tab {
-    /* tab button */
-    margin-left: 3px;
-    margin-top: 3px;
-    background: inactiveTabBackground;
-    border: 1px solid inactiveTabBorderColor;
-    padding: 3px 0px 3px 10px;
-    cursor: pointer;
-    cursor: hand;
-    position: relative;
-    display: inline-block;
-    height: 15px;
-    color: tabFontColor;
-}
-
-.ide-PartStack .ide-PartStack-Tab:hover {
-    color: mainFontColor;
-}
-
-.ide-PartStack .ide-PartStack-Tab span {
-    /* margin between text and image */
-    padding-bottom: 2px;
-    white-space: nowrap;
-    font-size: 11px;
-    line-height: 14px;
-    text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
-}
-
-.ide-PartStack .ide-PartStack-Tab img,
-.ide-PartStack .ide-PartStack-Tab svg {
-    vertical-align: middle;
-}
-
-.ide-PartStack-Tab-Icon {
+    height: 24px;
+    cursor: default;
     float: left;
-    position: relative;
-    top: 1px;
-    max-width: 16px;
-    max-height: 16px;
-    margin-right: 2px;
-    opacity: 0.6;
+    line-height: 18px;
+
+    color: tabTextColor;
+
+    font-size: 11px;
+
+    border-left: 1px solid tabsPanelBackground;
+    border-right: 1px solid tabsPanelBackground;
 }
 
-@sprite .ide-PartStack-Tab-Line-Error {
-    gwt-image: "squiggle";
-    background-position: bottom;
-    background-repeat: repeat-x;
-    margin: 0;
-    padding: 0;
-    height: auto;
-    width: auto;
-    overflow: visible;
-}
-
-@sprite .ide-PartStack-Tab-Line-Warning {
-    gwt-image: "squiggleWarning";
-    background-position: bottom;
-    background-repeat: repeat-x;
-    margin: 0;
-    padding: 0;
-    height: auto;
-    width: auto;
-    overflow: visible;
-}
-
-.ide-PartStack .ide-PartStack-Tab .CloseButton {
-    /* change cursor for close button */
-    cursor: default;
-    opacity: 0.5;
-    vertical-align: middle;
-    padding: 5px 10px;
-}
-
-.ide-PartStack .ide-PartStack-Tab .CloseButton:hover {
-    /* hihglight on hover */
-    opacity: 1;
-}
-
-.ide-PartStack .ide-PartStack-Tab-selected {
-    /* tab that is currently selected (active) */
-    cursor: default;
-    border: 1px solid tabBorder;
-    height: 16px;
-    background: activeTabBackground;
-    color: mainFontColor;
-}
-
-.ide-PartStack-focused {
-
-}
-
-.ide-PartStack-focused .ide-Base-Part-Toolbar {
-    /*Toolbar that is currently selected(active)*/
-}
-
-.ide-PartStack-Button-Left {
-    cursor: pointer;
-    height: 17px;
-    min-width: 14px;
-    z-index: 1;
-}
-
-.ide-PartStack-Button-Left > svg {
-    -webkit-transform: rotate(270deg);
-    -moz-transform: rotate(270deg);
-    transform: rotate(270deg);
-    fill: toolbarIconColor;
-    /*filter: svgUrlShadow;*/
-    height: 15px;
-    width: 15px;
-    margin: 1px -1px;
-}
-
-.ide-PartStack-Tab-Left {
-    -webkit-transform: rotate(270deg);
-    -moz-transform: rotate(270deg);
-    transform: rotate(270deg);
-    transform-origin: 9px 9px;
-    -webkit-transform-origin: 9px 9px; /* Safari and Chrome */
-    -moz-transform-origin: 9px 9px; /* Firefox */
-    /*position: absolute;*/
-    position: relative;
-    border-right: none !important;
-    border-left: 1px solid tabBorder;
-    box-shadow: -1px 0px 0px 0px tabBorderShadow;
-    padding-left: 15px;
-    padding-right: 15px;
-    white-space: nowrap;
-}
-
-.ide-PartStack-Tab-Label {
-    /* margin between text and image */
-    margin-right: 4px;
-    margin-left: 4px;
-    text-shadow: 0px 1px 0px buttonTextShadow;
-    position: relative;
-    top: 2px;
-    white-space: nowrap;
-}
-
-.ide-PartStack-Tab-Right {
-    -webkit-transform: rotate(90deg);
-    -moz-transform: rotate(90deg);
-    transform: rotate(90deg);
-    transform-origin: 9px 9px;
-    -webkit-transform-origin: 8px 9px; /* Safari and Chrome */
-    -moz-transform-origin: 8px 9px; /* Firefox */
-    position: relative;
-    box-shadow: 1px -1px 0px 0px tabBorderShadow;
-    padding-left: 15px;
-    padding-right: 15px;
-    white-space: nowrap;
-}
-
-.ide-PartStack-Tab-Below {
-    /* tab button */
-    border-right: 1px solid tabBorder;
-    box-shadow: 1px 0px 0px 0px tabBorderShadow;
-    cursor: pointer;
-    cursor: hand;
-    position: relative;
-    top: -2px;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.ide-PartStack-Tool-Tab-selected {
-    background: #454545;
-    color: #ffffff;
-}
-
-.ide-PartStack-Tool-Tab-selected::before {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 1px;
-    background: #47afdd;
-}
-
-.ide-PartStack-Tool-Tab-selected:before {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 1px;
-    background: #47afdd;
-}
-
-.selectedRightOrLeftTab {
-    background: #454545;
-    color: #ffffff;
-}
-
-.selectedRightOrLeftTab:before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-}
-
-.selectedRightOrLeftTab::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-}
-
-.onTabMouseOver {
-    background: #8c9092 !important;
+.ide-PartStack-Tab:hover {
+    color: hoveredTabTextColor;
 }
 
 .leftTabs {
-    border-left: 1px solid #8c9092;
-    box-shadow: inset 1px 0 0 0 black;
+    transform: rotate(270deg);
     -webkit-transform: rotate(270deg);
     -moz-transform: rotate(270deg);
+
+    transform-origin: 42px 42px;
     -webkit-transform-origin: 42px 42px;
     -moz-transform-origin: 42px 42px;
+
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
 }
 
 .rightTabs {
-    border-right: 1px solid black;
-    box-shadow: 1px 0 0 0 #8c9092;
+    transform: rotate(90deg);
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
-    -webkit-transform-origin: 8px 9px;
-    -moz-transform-origin: 8px 9px;
+
+    transform-origin: 12px 11px;
+    -webkit-transform-origin: 12px 11px;
+    -moz-transform-origin: 12px 11px;
+
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+}
+
+.ide-PartStack-Tool-Tab-selected,
+.selectedRightOrLeftTab {
+    color: activeTabTextColor;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
+    background-color: activeTabBackground;
+    border-left: 1px solid activeTabBorderColor;
+    border-right: 1px solid activeTabBorderColor;
+}
+
+.ide-PartStack-Tool-Tab-selected {
+}
+
+.ide-PartStack-Tool-Tab-selected:first-child {
+    border-left-color: transparent;
+}
+
+.selectedRightOrLeftTab {
 }
 
 .tabBordersDefault {
-    border-right: 1px solid #8c9092;
-    box-shadow: inset -1px 0 0 0 black;
 }
 
 .selectEditorTab {
@@ -269,8 +92,6 @@
 }
 
 .unSelectEditorBorder {
-    border-left: 3px solid #5A5C5C !important;
-    border-top: 3px solid #5A5C5C !important;
 }
 
 .listItemPanel {
@@ -284,30 +105,6 @@
     background: #5A5C5C !important;
 }
 
-.ide-PartStack-Tab-Right.ide-PartStack-Tool-Tab-selected:before {
-    right: 0px;
-    width: 100%;
-    border-bottom: 1px solid #47afdd !important;
-    border-top: 16px solid #454545;
-}
-
-.ide-PartStack-Tab-Left.ide-PartStack-Tool-Tab-selected:before {
-    left: 0px;
-    bottom: 0px;
-    width: literal("calc(100% - 1px)");
-    border-top: 16px solid #454545;
-    border-bottom: 1px solid #47afdd !important;
-}
-
-.ide-PartStack-Tab-Below.ide-PartStack-Tool-Tab-selected:before {
-    top: 0px;
-    left: 0px;
-    margin-left: 0px;
-    width: 100%;
-    border-top: 1px solid #47afdd !important;
-    border-bottom: 16px solid #454545;
-}
-
 .ide-PartStack-Content {
     background-color: partBackground;
     width: 100%;
@@ -316,8 +113,6 @@
 
 .ide-PartStack-Content div[role="part"][active] div[role="toolbar"] div[role="toolbar-header"] {
     background-color: rgb(77, 113, 145) ! important;
-    /*background-color: rgb(87, 143, 193) ! important;*/
-    /*background-color: rgb(53, 82, 108) ! important;*/
 }
 
 .ide-Base-Part-Title-Label {
@@ -331,130 +126,6 @@
 .ide-part-stack-header-menu-button {
     float: right;
     margin-top: -1px;
-}
-
-.ide-PartStack-Tool-Tab {
-    /* tab button */
-    border-right: 1px solid tabBorder;
-    cursor: pointer;
-    cursor: hand;
-    height: 17px;
-    font-size: 11px;
-    display: inline-block;
-}
-
-.ide-PartStack-Tool-Tab:hover {
-    color: buttonHoverTextColor;
-}
-
-.ide-PartStack-Tool-Tab:hover:before {
-    position: absolute;
-    height: 0px;
-    content: "";
-}
-
-.ide-PartStack-Tab-Right.ide-PartStack-Tool-Tab:hover:before {
-    right: 0px;
-    width: 100%;
-    border-top: 16px solid #7d7d7d;
-    border-bottom: 1px solid #7d7d7d;
-}
-
-.ide-PartStack-Tab-Left.ide-PartStack-Tool-Tab:hover:before {
-    left: 0px;
-    bottom: 0px;
-    width: literal("calc(100% - 1px)");
-    border-top: 16px solid #7d7d7d;
-    border-bottom: 1px solid #7d7d7d;
-}
-
-.ide-PartStack-Tab-Below.ide-PartStack-Tool-Tab:hover:before {
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    border-bottom: 16px solid #7d7d7d;
-    border-top: 1px solid #7d7d7d;
-}
-
-.ide-PartStack-Tab-Right-Button {
-    margin-right: 6px;
-    height: 16px;
-    float: right;
-}
-
-.ide-PartStack-Tab-Button {
-    margin-left: 3px;
-    margin-top: 3px;
-    background: inactiveTabBackground;
-    border: 1px solid inactiveTabBorderColor;
-    /*cursor: pointer;*/
-    /*cursor: hand;*/
-    position: relative;
-    display: inline-block;
-    height: 15px;
-    padding: 3px;
-}
-
-.ide-PartStack-Tab-Button img {
-    vertical-align: bottom;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 2px;
-    display: block;
-}
-
-.ide-PartStack-Tab-Button:hover {
-    border: 1px solid activeTabBorderColor !important;
-    background-color: activeTabBackground !important;
-}
-
-.ide-PartStack-Tab-Button-selected {
-    border: 1px solid activeTabBorderColor !important;
-    background-color: activeTabBackground !important;
-    border-bottom: none !important;
-    height: 16px;
-}
-
-.ide-PartStack-Multiple-Tabs-Container {
-    background-color: activeTabBackground;
-    border: 1px solid activeTabBorderColor;
-    border-top: none;
-    padding: 6 0;
-}
-
-.ide-PartStack-Multiple-Tabs-Item {
-    font-family: mainFontFamily;
-    font-size: 11px;
-    color: #d4d4d4;
-    text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
-    height: 18px;
-    line-height: 18px;
-    margin-bottom: 2px;
-    padding: 0 sideBarHorizontalPadding;
-    height: 18px;
-    line-height: 18px;
-    padding: 0 sideBarHorizontalPadding;
-}
-
-.ide-PartStack-Multiple-Tabs-Item:hover {
-    background-color: selectionBackground;
-    cursor: pointer;
-    opacity: 0.5;
-}
-
-.ide-PartStack-Multiple-Tabs-Item .CloseButton {
-    /* change cursor for close button */
-    cursor: default;
-    opacity: 0.5;
-    vertical-align: middle;
-    margin-left: 6px;
-    margin-top: 6px;
-    float: right;
-}
-
-.ide-PartStack-Multiple-Tabs-Item .CloseButton:hover {
-    /* hihglight on hover */
-    opacity: 1;
 }
 
 .ide-Base-Part-Toolbar {
@@ -485,8 +156,7 @@
     width: 100%;
 }
 
-.ide-Base-Part-Toolbar-Bottom-Icon,
-.ide-Base-Part-Toolbar-Bottom-Icon-Right {
+.ide-Base-Part-Toolbar-Bottom-Icon {
     fill: toolbarIconColor;
     height: 16px;
     width: 16px;
@@ -498,13 +168,6 @@
     margin-left: 10px;
     float: left;
 }
-
-.ide-Base-Part-Toolbar-Bottom-Icon-Right {
-    margin-right: 10px;
-    margin-left: 8px;
-    float: right;
-}
-
 
 .ide-Base-Part-Toolbar-Bottom-Button {
     -moz-box-sizing: border-box !important;
@@ -550,4 +213,27 @@
     -webkit-transform: scale(0.9);
     -moz-transform: scale(0.9);
     transform: scale(0.9);
+}
+
+
+@sprite .ide-PartStack-Tab-Line-Error {
+    gwt-image: "squiggle";
+    background-position: bottom;
+    background-repeat: repeat-x;
+    margin: 0;
+    padding: 0;
+    height: auto;
+    width: auto;
+    overflow: visible;
+}
+
+@sprite .ide-PartStack-Tab-Line-Warning {
+    gwt-image: "squiggleWarning";
+    background-position: bottom;
+    background-repeat: repeat-x;
+    margin: 0;
+    padding: 0;
+    height: auto;
+    width: auto;
+    overflow: visible;
 }
