--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/radiobuttongroup/radio-button-group.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/radiobuttongroup/radio-button-group.css
@@ -27,7 +27,7 @@
     border-color: #e6e6e6 #e6e6e6 #bfbfbf;
     border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
     border: 1px solid #000000;
-    box-shadow: inset 0px 1px 1px 0px rgba(136,136,136,0.50);
+    box-shadow: inset 0px 1px 1px 0px rgba(136, 136, 136, 0.50);
     cursor: pointer;
     display: inline-block;
     height: 14px;
@@ -43,7 +43,11 @@
 .mx-button label svg {
     width: 16px;
     height: 16px;
-    fill: #e7e7e7;
+    fill: toolbarIconColor;
+}
+
+.mx-button label:hover svg {
+    fill: toolbarHoverIconColor;
 }
 
 .mx-button label:hover {
@@ -63,7 +67,7 @@
 
 .mx-button input:checked + label {
     background: #414141;
-    box-shadow: inset 0px 1px 1px 0px rgba(0,0,0,0.50);
+    box-shadow: inset 0px 1px 1px 0px rgba(0, 0, 0, 0.50);
 }
 
 .mx-button input:checked + label svg {
