--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/toolbar/toolbar.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/toolbar/toolbar.css
@@ -11,49 +11,66 @@
 
 .toolbarPanel {
     width: 100%;
-    height: 26px;
+    height: 100%;
     overflow: hidden;
     cursor: default;
     background-color: toolbarBackgroundColor;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
+    background-image: toolbarBackgroundImage;
     box-sizing: border-box;
     border-top: 1px solid tabBorder;
     border-bottom: 1px solid tabBorder;
 }
 
 .toolbarPanel > div {
-    text-shadow: 0px 1px 0px buttonTextShadow;
+    text-shadow: 0 1px 0 buttonTextShadow;
+    height: inherit;
     float: left;
-    margin-top: 1px;
-    height: 24px;
     display: flex;
-    display: -webkit-flex;
-    display: -moz-box;
 }
 
 .toolbarPanel a {
     color: outputLinkColor;
 }
 
-.toolbarPanel .toolbarDelimiter {
-    width: 0px;
+.toolbarDelimiter {
+    width: 0;
+    margin: 2px;
     height: 18px;
+    padding: 0 !important;
     border-left: 1px solid tabBorder;
     border-right: 1px solid tabBorderShadow;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    margin-top: 2px;
-    margin-left: 2px;
-    margin-right: 2px;
+}
+
+.toolbarActionGroupPanel {
+    box-shadow: 0 1px 0 0 toolbarActionGroupShadowColor;
+    background-color: toolbarActionGroupBackgroundColor;
+    border: 1px solid toolbarActionGroupBorderColor;
+    border-radius: 3px;
+    margin: auto 14px auto 14px;
+    display: inherit;
+    height: 22px;
+}
+
+.toolbarActionGroupPanel > div {
+    margin: auto 4px auto 4px;
+}
+
+.toolbarActionGroupPanel > div:hover > svg {
+    fill: toolbarHoverIconColor;
 }
 
 .toolbarPanel svg.iconButtonIcon {
-    width: 14px;
-    height: 14px;
-    margin-top: 3px;
-    margin-left: 4px;
+    width: 18px;
+    height: 18px;
+    margin: auto;
+}
+
+.toolbarPanel > div > div {
+    display: inherit;
+    height: inherit;
 }
 
 .rightPanel {
@@ -61,25 +78,21 @@
 }
 
 .toolbarPanel .iconButtonPanel,
-.toolbarPanel .iconButtonPanelOver,
 .toolbarPanel .iconButtonPanelDown,
 .toolbarPanel .iconButtonPanelSelected,
-.toolbarPanel .iconButtonPanelSelectedOver,
 .toolbarPanel .iconButtonPanelSelectedDown {
-    width: 22px;
-    height: 20px;
+    width: 18px;
+    height: 18px;
     overflow: hidden;
-    margin-right: 1px;
+    text-align: center;
 }
 
 .iconButtonPanel,
-.iconButtonPanelOver,
 .iconButtonPanelDown,
 .iconButtonPanelSelected,
-.iconButtonPanelSelectedOver,
 .iconButtonPanelSelectedDown {
-    width: 22px;
-    height: 22px;
+    width: 18px;
+    height: 18px;
 }
 
 .iconButtonPanel {
@@ -90,8 +103,6 @@
     display: none;
 }
 
-.iconButtonPanelOver .tooltip,
-.popupButtonPanelOver .tooltip,
 .iconButtonPanel:hover .tooltip,
 .popupButtonPanel:hover .tooltip {
     display: inline-block;
@@ -99,8 +110,6 @@
     margin: 0;
 }
 
-.iconButtonPanelOver .tooltipBody,
-.popupButtonPanelOver .tooltipBody,
 .iconButtonPanel:hover .tooltipBody,
 .popupButtonPanel:hover .tooltipBody {
     display: inline-block;
@@ -119,8 +128,6 @@
     margin: inherit;
 }
 
-.iconButtonPanelOver .tooltipArrow,
-.popupButtonPanelOver .tooltipArrow,
 .iconButtonPanel:hover .tooltipArrow,
 .popupButtonPanel:hover .tooltipArrow {
     display: inline-block;
@@ -135,11 +142,6 @@
     margin: inherit;
 }
 
-.iconButtonPanelOver {
-    border-radius: 2px;
-    border: 1px solid tabBorder;
-}
-
 .iconButtonPanelDown {
     border-radius: 4px;
     border: 1px solid tabBorder;
@@ -147,12 +149,6 @@
 }
 
 .iconButtonPanelSelected {
-    border-radius: 4px;
-    border: 1px solid tabBorder;
-    background-color: hoverBackgroundColor;
-}
-
-.iconButtonPanelSelectedOver {
     border-radius: 4px;
     border: 1px solid tabBorder;
     background-color: hoverBackgroundColor;
@@ -178,23 +174,18 @@ svg.iconButtonIcon {
 
 .disabled svg {
     opacity: 0.6;
+    fill: toolbarIconColor !important;
 }
 
 .popupButtonPanel,
-.popupButtonPanelOver,
 .popupButtonPanelDown {
-    height: 20px;
+    height: 22px;
     width: 30px;
     border: 1px solid transparent;
 }
 
 .popupButtonPanel {
     background-position: 0px 0px;
-}
-
-.popupButtonPanelOver {
-    border-radius: 2px;
-    border: 1px solid tabBorder;
 }
 
 .popupButtonPanelDown {
@@ -223,7 +214,7 @@ svg.popupButtonIcon {
     height: 0;
     right: 2px;
     float: right;
-    border-top: 4px solid #000000;
+    border-top: 4px solid toolbarIconColor;
     border-right: 4px solid transparent;
     border-left: 4px solid transparent;
     content: "";
