--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/radiobuttongroup/radio-button-group.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/radiobuttongroup/radio-button-group.css
@@ -14,6 +14,7 @@
 
 .mx-button {
     float: left;
+    margin-bottom: 1px;
 }
 
 .mx-button input {
@@ -21,66 +22,43 @@
 }
 
 .mx-button label {
-    background-color: #4e4e4e;
-    background-image: linear-gradient(top, #ffffff, #e6e6e6);
-    background-repeat: repeat-x;
-    border-color: #e6e6e6 #e6e6e6 #bfbfbf;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    border: 1px solid #000000;
-    box-shadow: inset 0px 1px 1px 0px rgba(136, 136, 136, 0.50);
+    width: 18px;
+    height: 16px;
     cursor: pointer;
-    display: inline-block;
-    height: 14px;
-    margin-bottom: 0;
-    margin-left: -1px;
-    padding: 3px 10px;
-    font-size: 13px;
-    line-height: 13px;
+    border-radius: 4px;
     text-align: center;
+    background: inherit;
+    display: inline-block;
     vertical-align: middle;
 }
 
 .mx-button label svg {
-    width: 16px;
-    height: 16px;
+    width: 12px;
+    height: 12px;
     fill: toolbarIconColor;
+    -webkit-filter: drop-shadow( 0 0.5px 0 rgba(0, 0, 0, 0.3));
+    filter: drop-shadow( 0 0.5px 0 rgba(0, 0, 0, 0.3));
+    vertical-align: inherit;
 }
 
 .mx-button label:hover svg {
     fill: toolbarHoverIconColor;
 }
 
-.mx-button label:hover {
-    background-color: #414141;
-    background-position: 0 -15px;
-    text-decoration: none;
-    transition: background-position 0.1s linear;
-}
-
-.mx-button label:active,
-.mx-button input:focus + label {
-    background-color: #656565;
-    background-image: none;
-    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
-    outline: 0;
+.mx-button input:checked + label svg {
+    fill: #fff !important;
 }
 
 .mx-button input:checked + label {
-    background: #414141;
-    box-shadow: inset 0px 1px 1px 0px rgba(0, 0, 0, 0.50);
-}
-
-.mx-button input:checked + label svg {
-    fill: #4eabff;
+    background: #4eabff;
+    background: perspectiveSwitcherBackgroundColor;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
 }
 
 .mx-button:first-child label {
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-    margin-left: 0;
+    margin-right: 4px;
 }
 
 .mx-button:last-child label {
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
+    margin-left: 4px;
 }
